# academic-figures-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  MCP_VSX_SPEC.md  README.md  ROADMAP.md  compose_nysora.py  env.example  pyproject.toml
.academic-figures/evaluations/: repo-architecture-v2-eval.json  repo-intro-hero-eval.json  repo-workflow-flowchart-eval.json
.academic-figures/jobs/: repo-architecture-diagram.json  repo-intro-hero.json  repo-workflow-flowchart.json
.asset-aware-mcp/: assistant-assets.json
.codex/skills/academic-figure-drawing-harness/: SKILL.md
.github/: copilot-instructions.md
.github/bylaws/: git-workflow.md
.github/prompts/: code-audit.prompt.md  edit-figure.prompt.md  evaluate-figure.prompt.md  generate-figure.prompt.md  security-scan.prompt.md
.github/workflows/: ci.yml  publish.yml
docs/: competitive-landscape.md  roadmap-v2.md  spec-layer-decomposition.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
scripts/: commit_size_guard.py  env_smoke_test.py  get_version.py  package_smoke.py  start_afm_local.ps1  start_afm_local.py
scripts/hooks/: agent_freshness_check.py  memory_bank_reminder.py
src/: bootstrap.py  composite.py  direct_run.py  figure_classifier.py  orchestrator.py  prompt_engine.py  pubmed.py  py.typed  quality_eval.py  server.py
src/application/: __init__.py  batch_generate.py  composite_figure.py  contracts.py  edit_figure.py  evaluate_figure.py  generate_figure.py  get_manifest_detail.py  list_manifests.py  multi_turn_edit.py  plan_figure.py  poster.py  prepare_publication_image.py  record_host_review.py  replay_manifest.py  retarget_journal.py  review_harness.py  style.py  verify_figure.py
src/domain/: __init__.py  classifier.py  entities.py  exceptions.py  interfaces.py  value_objects.py
src/infrastructure/: __init__.py  composite.py  config.py  file_metadata_fetcher.py  gemini_adapter.py  gemini_provider_runtimes.py  journal_registry.py  manifest_store.py  output_formatter.py  prompt_engine.py  publication_image_processor.py  pubmed_client.py  stub_image_generator.py  style_store.py
src/presentation/: __init__.py  dependencies.py  direct_run.py  prompts.py  resources.py  server.py  tools.py  validation.py
templates/: ai-medical-illustration-evaluation.md  journal-profiles.yaml  model-benchmark.md  prompt-templates.md
tests/unit/: test_bootstrap.py
tests/unit/application/: test_batch_generate.py  test_cjk_quality_gate.py  test_composite_figure.py  test_edit_figure.py  test_evaluate_figure.py  test_generate_figure.py  test_manifest_workflows.py  test_multi_turn_edit.py  test_plan_figure.py  test_poster.py  test_prepare_publication_image.py  test_review_harness.py  test_style.py  test_verify_figure.py
tests/unit/domain/: test_classifier.py  test_entities.py
tests/unit/infrastructure/: test_config.py  test_file_metadata_fetcher.py  test_gemini_adapter.py  test_layout_presets.py  test_manifest_store.py  test_prompt_engine.py  test_publication_image_processor.py  test_pubmed_client.py
tests/unit/presentation/: test_dependencies.py  test_new_tools.py  test_resources.py  test_tools.py  test_validation.py
vscode-extension/: .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/resources/knowledge/: anatomy-color-standards.md  code-rendering.md  gemini-tips.md  journal-figure-standards.md  scientific-figures-guide.md
vscode-extension/resources/repo-assets/academic-figures/.clinerules/workflows/: full-check.md  mcp-setup.md  release-publish.md  skills-audit.md
vscode-extension/resources/repo-assets/academic-figures/.github/: copilot-instructions.md
vscode-extension/resources/walkthrough/: api-key.md  generate.md  mcp-settings.md
vscode-extension/scripts/: check-package-contents.mjs  check-sync-assets.mjs  sync-assets.mjs
vscode-extension/src/: assistantAssets.ts  clineConfig.ts  codexConfig.ts  connectionConfig.ts  extension.ts  mcpProvider.ts  vscode.proposed.d.ts
vscode-extension/src/test/: assistantAssets.test.ts  clineConfig.test.ts  codexConfig.test.ts
